# Rock_Paper_Scissors

./: .gitignore  README.md
Client_Rock_Paper_Scissors/: CMakeLists.txt  appconstants.h  build_client.bat  cameraengine.cpp  cameraengine.h  cameraworker.cpp  cameraworker.h  framerenderer.cpp  framerenderer.h  gamecontroller.cpp  gamecontroller.h  gamedata.h  handdetector.cpp  handdetector.h  handdetectorai.cpp  handdetectorai.h  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkmanager.cpp  networkmanager.h  stylemanager.cpp  stylemanager.h
Server_Rock_Paper_Scissors/: CMakeLists.txt  build_server.bat  clienthandler.cpp  clienthandler.h  gamesession.cpp  gamesession.h  protocol.h  servergamecontroller.cpp  servergamecontroller.h  servermanager.cpp  servermanager.h  serverwindow.cpp  serverwindow.h  serverwindow.ui  stylemanager.cpp  stylemanager.h
